--- a/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
+++ b/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
+  </ItemGroup>
+
 </Project>
