--- a/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
+++ b/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
@@ -4,12 +4,13 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
