--- a/RedisBackupMinimalCli/RedisBackupMinimalCli.Tests/RedisBackupMinimalCli.Tests.csproj
+++ b/RedisBackupMinimalCli/RedisBackupMinimalCli.Tests/RedisBackupMinimalCli.Tests.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +26,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RedisBackupMinimalCli\RedisBackupMinimalCli.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="redis-test-data.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
