--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore RedisBackupMinimalCli/RedisBackupMinimalCli.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal RedisBackupMinimalCli/RedisBackupMinimalCli.Tests/RedisBackupMinimalCli.Tests.csproj
                   
