--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore RedisBackupMinimalCli/RedisBackupMinimalCli.sln
     - name: Build
       run: dotnet build --no-restore RedisBackupMinimalCli/RedisBackupMinimalCli.sln
     - name: Test
