--- a/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
+++ b/RedisBackupMinimalCli/RedisBackupMinimalCli/RedisBackupMinimalCli.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <TargetFramework>net7.0</TargetFramework>
+    <PackAsTool>True</PackAsTool>
   </PropertyGroup>
 
   <ItemGroup>
